mobile alignment fix

--- a/src/app/carddetails/carddetails.component.scss
+++ b/src/app/carddetails/carddetails.component.scss
@@ -34,6 +34,14 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+}
+
+// .col-1 {width: 33.33%;}
+// .col-2 {width: 33.33%;}
+// .col-3 {width: 33.33%;}
+
   // .container {
   //   margin-top: 8px;
   //   margin-right: 24px;
